--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,7 +1,7 @@
 {
     "@@locale": "en",
     "country_code": "US",
-    "start_label": "Let's Start",
+    "start_label": "Search Favorite Coins",
     "search_coins_label": "Search Coins...",
     "currency": "usd",
     "no_coins_found": "No coins found",
@@ -18,5 +18,23 @@
     "detailed_info_coming_soon": "Detailed information will be available soon. This section will include coin description, technology, team and roadmap.",
     "chart_min": "Min",
     "chart_max": "Max",
-    "chart_variation": "Variation"
+    "chart_variation": "Variation",
+    "add_to_favorites": "Add to Favorites",
+    "remove_from_favorites": "Remove from Favorites",
+    "favorite_coins": "Favorite Coins",
+    "add_to_favorites_confirmation": "Do you want to add {coin} to your favorites?",
+    "remove_from_favorites_confirmation": "Do you want to remove {coin} from your favorites?",
+    "cancel_label": "Cancel",
+    "yes_label": "Yes",
+    "rate_limit_upgrade_message": "Rate limit exceeded, please wait a few minutes before trying again. Visit https://www.coingecko.com/en/api/pricing for higher rate limit plans.",
+    "network_error": "Network error. Please check your connection.",
+    "general_fetch_error": "Error fetching coins. Please try again.",
+    "chart_network_error": "Connection error. Showing simulated data.",
+    "chart_server_error": "Server error. Showing simulated data.",
+    "chart_generic_error": "Error loading chart data. Showing simulated data.",
+    "ok_label": "OK",
+    "favorites_title": "Favorites",
+    "no_favorites_found": "No favorite coins found",
+    "add_favorites_instruction": "Add coins to your favorites by tapping the star icon"
+
 }
